Dodano treść programu

--- a/01.html
+++ b/01.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <div id=”container”> CONTAINER 
-	<div id=”menu”> MENU </div>
+	<div id=”menu”> MENU
+	<div id=”content”> <p> Treść programu </p> </div>  
+</div>
 </div> 
 </body>
 </html>
